# internal/router/router.go
@@ -68,6 +68,8 @@ func Setup(
 	uh := handler.NewUserHandler(db)
 	{
 		adminH := handler.NewAdminHandler(db)
+		adminAuth.GET("/admins", adminH.List)
+		adminAuth.POST("/admins", adminH.Create)
 		adminAuth.GET("/users", uh.List)
 		adminAuth.POST("/users", uh.Create)
 		adminAuth.PUT("/admin/password", adminH.ChangeOwnPassword)
